# pleepbot-rs

./: .editorconfig  .gitattributes  .gitignore  Cargo.toml  Justfile  compose.yml  deny.toml
apps/api/link_shortener/: Cargo.toml  README.md  schema.sql
apps/api/link_shortener/src/: main.rs
apps/api/pastebin/: Cargo.toml  README.md  schema.sql
apps/api/pleepbot_api/: Cargo.toml
apps/api/twitch_logs/: Cargo.toml  README.md  schema.sql
apps/link_shortener/: Cargo.toml  schema.sql
apps/link_shortener/migrations/: 0002_clicks.up.sql
apps/link_shortener/src/: app.rs  main.rs
apps/link_shortener/src/routes/: mod.rs
apps/link_shortener/src/routes/shorten/: handler.rs  service.rs
apps/link_shortener/src/routes/slug/: handler.rs  service.rs
apps/media-api/: Cargo.toml  README.md  TODO.md
apps/media-api/docs/: schema_plan.sql
apps/media-api/migrations/: 0001_links.up.sql  0002_clicks.down.sql  0002_clicks.up.sql
apps/media-api/src/: error.rs  main.rs
apps/media-api/src/routes/shorten/: handler.rs  mod.rs
apps/media-api/src/routes/slug/: mod.rs
apps/pastebin/: Cargo.toml
apps/pleepbot/: Cargo.toml  README.md  schema.sql
apps/pleepbot-api/: Cargo.toml
apps/pleepbot_api/: Cargo.toml
apps/twitch-logs-api/: Cargo.toml
apps/twitch-logs-api/docs/: schema_plan.sql
apps/twitch-logs-api/src/http/: mod.rs
apps/twitch_logs/: Cargo.toml
apps/twitch_logs/src/: global.rs  main.rs
apps/twitch_logs/src/http/v1/: handler.rs  mod.rs
schemas/: link_shortener.sql  pleepbot_api.sql
shared/bot/commands/docs/: commands.md  fishing.md
shared/bot/core/: Cargo.toml
shared/bot/core/src/: bot.rs  command.rs  module.rs
shared/db/: Cargo.toml  README.md
shared/db/src/: config.rs
shared/integrations/seventv/src/: lib.rs
shared/seventv/: Cargo.toml  README.md
shared/twitch_bot/: Cargo.toml  README.md
shared/twitch_bot/src/: cmd_chain.rs  cooldown.rs  error.rs
shared/utils/db/src/: connection.rs
