[workspace]
resolver = "3"
members = [
    "apps/api/link_shortener",
    "apps/api/pastebin",
    "apps/api/pleepbot_api",
    "apps/api/twitch_logs",
    "apps/pleepbot",
    "shared/db",
    "shared/seventv",
    "shared/twitch_bot",
]
default-members = ["apps/pleepbot"]

[workspace.package]
edition = "2024"
publish = false

[workspace.dependencies]
db = { path = "shared/db" }
seventv = { path = "shared/seventv" }
twitch_bot = { path = "shared/twitch_bot" }

actix-web = "4.10.2"
anyhow = "1.0.97"
chrono = { version = "0.4.40", features = ["serde"] }
dotenvy = "0.15.7"
envy = "0.4.2"
nanoid = "0.4.0"
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.5", features = ["runtime-tokio", "tls-native-tls", "postgres", "macros", "chrono", "derive"] }
thiserror = "2.0.12"
tokio = { version = "1.45.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
twitch_api = "0.7.2"
twitch-irc = "5.0.1"
ulid = { version = "1.2.1", features = ["serde"] }
