[workspace]
resolver = "3"
members = [
    "apps/link_shortener",
    "apps/pastebin",
    "apps/pleepbot_api",
    "apps/twitch_logs",
    "apps/pleepbot",
    "shared/db",
    "shared/seventv",
    "shared/twitch_bot",
]
default-members = ["apps/pleepbot"]

[workspace.package]
edition = "2024"
publish = false

[workspace.dependencies]
db = { path = "shared/db" }
seventv = { path = "shared/seventv" }
twitch_bot = { path = "shared/twitch_bot" }

axum = "0.8.4"
axum-extra = { version = "0.10.1", features = ["typed-header"]}
anyhow = "1.0.97"
chrono = { version = "0.4.40", features = ["serde"] }
dotenvy = "0.15.7"
envy = "0.4.2"
headers = "0.4.1"
reqwest = { version = "0.12.22", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "tls-native-tls", "postgres", "macros", "chrono", "derive"] }
thiserror = "2.0.12"
tokio = { version = "1.46.1", features = ["full"] }
tower = "0.5.2"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
twitch_api = "0.7.2"
twitch-irc = "5.0.1"
ulid = { version = "1.2.1", features = ["serde"] }
utoipa = { version = "5.4.0", features = ["chrono"]}
utoipa-axum = "0.2"
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
