[package]
name = "link_shortener_api"
version = "0.1.0"
description = ""
edition.workspace = true
publish.workspace = true

[dependencies]
axum.workspace = true
chrono.workspace = true
db.workspace = true
dotenvy.workspace = true
envy.workspace = true
nanoid = "0.4.0"
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
utoipa.workspace = true
