[package]
name = "media-api"
version = "0.1.0"
description = ""
edition.workspace = true
publish.workspace = true

[dependencies]
axum.workspace = true
axum-extra.workspace = true
chrono.workspace = true
db.workspace = true
dotenvy.workspace = true
envy.workspace = true
nanoid = "0.4.0"
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url = "2.5.4"
utoipa.workspace = true
utoipa-axum.workspace = true
utoipa-swagger-ui.workspace = true
