[package]
name = "twitch-logs-api"
version = "0.1.0"
description = "A Twitch message logging api"
edition.workspace = true
publish.workspace = true

[dependencies]
axum.workspace = true
chrono.workspace = true
dotenvy.workspace = true
envy.workspace = true
serde.workspace = true
tokio.workspace = true
tower.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
twitch-irc.workspace = true
twitch_api.workspace = true
