[package]
name = "link_shortener_api"
version = "0.1.0"
description = ""
edition.workspace = true
publish.workspace = true

[dependencies]
actix-web.workspace = true
chrono.workspace = true
dotenvy.workspace = true
envy.workspace = true
nanoid.workspace = true
serde.workspace = true
serde_json.workspace = true
